test: 全文搜索